{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 12,
  "lineage": "32783af8-3cc7-9cf8-8be5-03c6db2078a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:652132383210:instance/i-0f4ecff998ae724b3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f4ecff998ae724b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mini-project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01216bd897a347196"
              }
            ],
            "primary_network_interface_id": "eni-01216bd897a347196",
            "private_dns": "ip-10-0-1-208.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-52-66-176-248.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.176.248",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03be17f4df70775a4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f7d33fbc3904425",
            "tags": {
              "Name": "mini-project-ec2"
            },
            "tags_all": {
              "Name": "mini-project-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdf0c0ab84da509b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "652132383210",
            "id": "i-0f4ecff998ae724b3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.demo_key",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:652132383210:internet-gateway/igw-04d12ff90965d4bf7",
            "id": "igw-04d12ff90965d4bf7",
            "owner_id": "652132383210",
            "region": "ap-south-1",
            "tags": {
              "Name": "mini-project-igw"
            },
            "tags_all": {
              "Name": "mini-project-igw"
            },
            "vpc_id": "vpc-024196e9a21f0dd75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04d12ff90965d4bf7",
            "id": "r-rtb-08c0ef2cf58c0f81c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-08c0ef2cf58c0f81c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "652132383210",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-08c0ef2cf58c0f81c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:652132383210:route-table/rtb-08c0ef2cf58c0f81c",
            "id": "rtb-08c0ef2cf58c0f81c",
            "owner_id": "652132383210",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d12ff90965d4bf7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mini-project-public-rt"
            },
            "tags_all": {
              "Name": "mini-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-024196e9a21f0dd75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "652132383210",
            "id": "rtb-08c0ef2cf58c0f81c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b45db7a99214ae1",
            "region": "ap-south-1",
            "route_table_id": "rtb-08c0ef2cf58c0f81c",
            "subnet_id": "subnet-06f7d33fbc3904425"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:652132383210:security-group/sg-0fdf0c0ab84da509b",
            "description": "Allow SSH \u0026 HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdf0c0ab84da509b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "mini-project-sg",
            "name_prefix": "",
            "owner_id": "652132383210",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mini-project-sg"
            },
            "tags_all": {
              "Name": "mini-project-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-024196e9a21f0dd75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "652132383210",
            "id": "sg-0fdf0c0ab84da509b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:652132383210:subnet/subnet-06f7d33fbc3904425",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f7d33fbc3904425",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "652132383210",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "mini-project-public-subnet"
            },
            "tags_all": {
              "Name": "mini-project-public-subnet"
            },
            "vpc_id": "vpc-024196e9a21f0dd75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "652132383210",
            "id": "subnet-06f7d33fbc3904425",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:652132383210:vpc/vpc-024196e9a21f0dd75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036a4d8354c0f007e",
            "default_route_table_id": "rtb-0faf975244bff77da",
            "default_security_group_id": "sg-0109689d5dd9e324e",
            "dhcp_options_id": "dopt-0d5e74aa058c0ce88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024196e9a21f0dd75",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0faf975244bff77da",
            "owner_id": "652132383210",
            "region": "ap-south-1",
            "tags": {
              "Name": "mini-project-vpc"
            },
            "tags_all": {
              "Name": "mini-project-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "652132383210",
            "id": "vpc-024196e9a21f0dd75",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}